--- a/card.css
+++ b/card.css
@@ -96,3 +96,24 @@ td {
     margin: 0 5px;
     
 }
+
+.stock {
+    display: inline-block;
+    width: auto;
+    border: 1px solid #219653;
+    border-radius: 7px;
+    color: #219653;
+    font-size: 10px;
+    text-align: center;
+}
+
+.stock-text {
+    
+    color: #219653;
+    font-size: 10px;
+    padding: 10px;
+}
+
+.margins-extra {
+    margin: 40px 0;
+}
