--- a/card.css
+++ b/card.css
@@ -1,7 +1,40 @@
+@font-face {
+    font-weight: 400;
+    font-family: Mont;
+    src: url("font/Mont-Regular.ttf");
+}
+
+@font-face {
+    font-weight: 700;
+    font-family: Mont;
+    src: url("font/Mont-Bold.ttf");
+}
+
+:root {
+    --color-gray: #456380;
+    --color-green: #219653;
+    --color-orange: #F2994A;
+    --color-red: #EB5757;
+    --color-bordeaux: #8E323D;  
+}
+
+
 body {
     max-width: 1200px;
     margin: 0 auto;
+
     
+    
+}
+
+
+
+.general {
+    max-width: 1200px;
+    margin: 0 auto;
+
+    font-family: Mont, sans-serif;
+    font-size: 12px;
 }
 
 
@@ -34,19 +67,16 @@ body {
 }
 
 .btn {
-    box-sizing: border-box;
-    border-radius: 7px;
-    width: 35%;
-    background: #456380;
-    padding: 15px 10px;
-    text-align: center;
-
-}
-
-.link {
+    
+    border-radius: 10px;
+    width: 195px;
+    height: 45px;
+    background: var(--color-bordeaux);
+    padding: 15px 24px;
     color: white;
     text-decoration: none;
 }
+
 
 .table-block {
 
@@ -63,15 +93,54 @@ td {
 .extra {
     
     width: 25%;
+    
    
+}
+
+.decanter-glass {
+    display: inline-flex;
+    max-width: 45%;
+    border: 1px solid var(--color-bordeaux);
+    border-radius: 7px;
+
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    align-items: center;
+    
+}
+
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+
+
+img {
+    padding: 2px;
+}
+
+.dg-text {
+    
+    color: var(--color-bordeaux);
+    font-size: 0.8em;
+    line-height: 1;
+    text-align: left;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0;
+    padding-bottom: 0;
+    
 }
 
 .critic {
     display: inline-block;
     width: auto;
-    border: 1px solid #456380;
+    border: 1px solid var(--color-gray);
     border-radius: 7px;
     padding: 2px;
+    margin: 5px;
+    
 }
 
 .score {
@@ -79,41 +148,38 @@ td {
     box-sizing: border-box;
     border-radius: 7px;
     border-style: none;
-    width: 22px;
-    height: 22px;
-    padding: 5px;
-    background: #456380;
+    
+    
+    background: var(--color-gray);
     color: white;
-    font-size: 10px;
-    text-align: center;
+    font-size: 0.7em;
+    padding: 7px;
 }
 
 .critic-name {
     display: inline-block;
     text-align: center;
-    color: #456380;
-    font-size: 10px;
-    margin: 0 5px;
+    color: var(--color-gray);
+    font-size: 0.7em;
+    padding: 0.5em;
+    
     
 }
 
 .stock {
     display: inline-block;
     width: auto;
-    border: 1px solid #219653;
-    border-radius: 7px;
-    color: #219653;
-    font-size: 10px;
-    text-align: center;
+    border: 1px solid var(--color-green);
+    border-radius: 5px;
+    
+    text-align: baseline;
+    margin: 20px 10px;
 }
 
 .stock-text {
     
-    color: #219653;
-    font-size: 10px;
-    padding: 10px;
+    color: var(--color-green);
+    font-size: 1em;
+    padding: 5px;
 }
 
-.margins-extra {
-    margin: 40px 0;
-}
